objects/ContactToContactRelationship__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_From_Formula__c</fullName>
        <formula>Contact_Name__r.FirstName &amp;&quot; &quot;&amp; Contact_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact From</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts You are Related To</relationshipLabel>
        <relationshipName>Contact_To_Contact_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_To__c</fullName>
        <formula>Target_Contact__r.FirstName &amp;&quot; &quot;&amp; Target_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <formula>Contact_Name__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_for_Target_Contact__c</fullName>
        <formula>Target_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account for Target Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <inlineHelpText>How strong is the relationship?   1) Priority - do they make you a priority?  2) Action - will they take action?  3) Honesty - can you be honest?  4) Advocacy (willing to risk their reputation for us?)</inlineHelpText>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Relationship</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Honesty</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_type__c</fullName>
        <label>Relationship Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AE/AM</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Secondary Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Prior Employment</fullName>
                </value>
                <value>
                    <fullName>Association Affiliation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Anthem Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Anthem Secondary Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Prior Associate</fullName>
                    <isActive>false</isActive>
                    <label>Prior Associate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strength_Level__c</fullName>
        <description>Relationship Strength 0-5 (5 Strongest)</description>
        <inlineHelpText>Relationship Strength 0-5 (5 Strongest)</inlineHelpText>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts Related to You</relationshipLabel>
        <relationshipName>Contact_To_Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_Has_the_Relationship__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact To Contact Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Target_Contact__c</columns>
        <columns>Relationship_type__c</columns>
        <columns>Relationship_Strength__c</columns>
        <columns>Date_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact To Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>